--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -1198,3 +1198,5 @@ h4+ul {
 ** [master 008a169] html h4-table spacing seems to work fine -- reduced the top margin of table in pdf form
 * 16nov24 Major makeover for the PDF version, mostly to adapt it to bigger font sizes so people can actually read my CV when it's printed out!
 ** [master f0f95a1] enlarged all body text in PDF, and changed the 'skills' section so that it's vertical not horizontal, and added print out of links to the PDF
+* 16nov25
+** [master 754923e] align blockquote to the right and print out website of CV in pdf
