--- a/md2rnotes.org
+++ b/md2rnotes.org
@@ -2685,3 +2685,9 @@ Wrote pdf resume to: ./work/docs/cv.pdf
 - It's not a problem specific to the ~page-break~ command being unavoidable. Even if the opposite command is given (i.e. ~page-break-before: always;~, the command is ignored.
 - also not entirely sure if it is the problem with ~wkhtmltopdf~ -- the command is also not respected when printing directly from the html, from a Chrome browser.
 - although I must say that there are no weird page breaks when printing directly from the browser, and could be a permanent solution is I manage to fix the ugly font
+*** Tips
+- https://makandracards.com/makandra/47966-how-to-fix-html-elements-being-cut-off-when-printing
+- https://github.com/wkhtmltopdf/wkhtmltopdf/issues/2982
+** TODO ~wkhtmltopdf~ is old. Try out other HTML to PDF conversion tools
+- State "TODO"       from              [2020-05-17 Sun 02:10]
+Source: https://www.paperplane.app/blog/modern-html-to-pdf-conversion-2019/
